# Flame

./: .gitignore  .gitmodules  CMakeLists.txt  Flame.sln  README.md  premake5.lua  premake5_buildoption_version.lua
Engine/Source/: CMakeLists.txt
Engine/Source/Editor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  FlameEditorApp.cpp  ImGuiWrapper.cpp  ImGuiWrapper.h  ParticleSystem.cpp  ParticleSystem.h  Random.h  imgui.ini
Engine/Source/Editor/IconManager/: IconManager.cpp  IconManager.h
Engine/Source/Editor/ImGuiWrapper/: ImGuiWrapper.cpp  ImGuiWrapper.h
Engine/Source/Editor/Log/: CMakeLists.txt  OutputLog.cpp  OutputLog.h
Engine/Source/Editor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h
Engine/Source/Editor/RawRenderTest/: RawLayer.cpp  RawLayer.h
Engine/Source/Editor/assets/scene/: Example.flame
Engine/Source/Runtime/: CMakeLists.txt  Flame.h  flamepch.cpp  flamepch.h
Engine/Source/Runtime/Animation/: animation.cpp  animation.h  animator.h  animdata.h  bone.h
Engine/Source/Runtime/Camera/: Camera.h  EditorCamera.cpp  EditorCamera.h  SceneCamera.cpp  SceneCamera.h
Engine/Source/Runtime/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  PublicSingleton.h  Timer.h  Timestep.h  UUID.cpp  Window.h
Engine/Source/Runtime/ECS/: CMakeLists.txt
Engine/Source/Runtime/ECS/Component/: CMakeLists.txt  ComponentBase.h  ComponentConcept.h  ComponentGroup.h
Engine/Source/Runtime/ECS/Component/Audio/: SoundComponent.h
Engine/Source/Runtime/ECS/Component/Basic/: CMakeLists.txt  IDComponent.h  TagComponent.h
Engine/Source/Runtime/ECS/Component/Camera/: CMakeLists.txt  CameraComponent.h
Engine/Source/Runtime/ECS/Component/Light/: DirectionalLightComponent.cpp  DirectionalLightComponent.h  PointLightComponent.cpp  PointLightComponent.h
Engine/Source/Runtime/ECS/Component/Mesh/: MeshComponent.cpp  MeshComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Engine/Source/Runtime/ECS/Component/Physics/: Rigidbody2DComponent.h
Engine/Source/Runtime/ECS/Component/Physics/2D/: BoxCollider2DComponent.h  CMakeLists.txt  CircleCollider2DComponent.h
Engine/Source/Runtime/ECS/Component/Physics/3D/: BoxCollider3DComponent.h  ConvexHullComponent.h  Rigidbody3DComponent.cpp  (+3 more)
Engine/Source/Runtime/ECS/Component/Renderer/: DirectionalLightComponent.cpp  DirectionalLightComponent.h  LightComponent.cpp  LightComponent.h  PointLightComponent.cpp  PointLightComponent.h
Engine/Source/Runtime/ECS/Component/Script/: CMakeLists.txt  NativeScriptComponent.h  PythonScriptComponent.cpp  PythonScriptComponent.h
Engine/Source/Runtime/ECS/Component/Shape/: CMakeLists.txt  CircleRendererComponent.h  SpriteRendererComponent.h
Engine/Source/Runtime/ECS/Component/Transform/: CMakeLists.txt  TransformComponent.h
Engine/Source/Runtime/ECS/Entity/: Entity.cpp  Entity.h  ScriptEntity.cpp  ScriptEntity.h  ScriptableEntity.cpp  ScriptableEntity.h
Engine/Source/Runtime/ECS/Registry/: CMakeLists.txt  Registry.h
Engine/Source/Runtime/ECS/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
Engine/Source/Runtime/ECS/Serializer/: SceneSerializer.cpp  SceneSerializer.h
Engine/Source/Runtime/ECS/System/: CMakeLists.txt  System.h  SystemGroup.h
Engine/Source/Runtime/ECS/System/Audio/: AudioScriptSystem.cpp  AudioScriptSystem.h
Engine/Source/Runtime/ECS/System/Physics/: CMakeLists.txt  PhysicsSystem2D.cpp  PhysicsSystem2D.h  PhysicsSystem3D.cpp  PhysicsSystem3D.h
Engine/Source/Runtime/ECS/System/Render/: EnvironmentSystem.cpp  EnvironmentSystem.h  RenderSystem2D.cpp  RenderSystem2D.h  RenderSystem3D.cpp  RenderSystem3D.h
Engine/Source/Runtime/ECS/System/Script/: NativeScriptSystem.cpp  NativeScriptSystem.h  PythonScriptSystem.cpp  PythonScriptSystem.h
Engine/Source/Runtime/Events/: Event.h
Engine/Source/Runtime/ImGui/: CMakeLists.txt  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGui_Spectrum.cpp  ImGui_Spectrum.h
Engine/Source/Runtime/Math/: CMakeLists.txt  Math.cpp  Math.h
Engine/Source/Runtime/Mesh/: Mesh.cpp  Mesh.h  SubMesh.cpp  SubMesh.h
Engine/Source/Runtime/Platform/: CMakeLists.txt
Engine/Source/Runtime/Platform/OpenGL/: CMakeLists.txt  NativeOpenGLShader.cpp  NativeOpenGLShader.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLPostProcessing.cpp  OpenGLPostProcessing.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Engine/Source/Runtime/Platform/WindowsWindow/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Runtime/Renderer/: Buffer.cpp  CMakeLists.txt  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PostProcessing.cpp  PostProcessing.h  RenderCommand.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  StaticMesh.cpp  StaticMesh.h  SubTexture2D.cpp  Texture.cpp  Texture.h  UniformBuffer.cpp  (+5 more)
Engine/Source/Runtime/Resource/AssetManager/: AssetManager.cpp  AssetManager.h
Engine/Source/Runtime/Resource/ConfigManager/: ConfigManager.cpp  ConfigManager.h
Engine/Source/Runtime/Resource/ModeManager/: ModeManager.cpp  ModeManager.h
Engine/Source/Runtime/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.h  SceneSerializer.cpp
Engine/Source/Runtime/Utils/: CMakeLists.txt  PlatformUtils.h
Engine/Source/Script/: MoveRight.py
(+167 files in other folders)
